--- a/random-game/index.html
+++ b/random-game/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./game-styles.css">
     <link rel="icon" href="assets/favicon/favicon.png">
     <title>Random game</title>
 </head>
@@ -19,8 +20,29 @@
         <h1 class="clickable">Random Game</h1>
     </div>
 </header>
-<main class="container game">
-
+<main class="container" id="game-container">
+    <div class="game active" data-state="menu">
+        <ol class="simple-menu">
+            <li class="simple-menu__item" data-nextstate="battle">Start game</li>
+            <li class="simple-menu__item" data-nextstate="manual">Manual</li>
+            <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
+        </ol>
+    </div>
+    <div class="game" data-state="battle">
+        Battle
+    </div>
+    <div class="game" data-state="manual">
+        Manual
+    </div>
+    <div class="game" data-state="scores">
+        Scores
+    </div>
+    <div class="game" data-state="pause">
+        Pause
+    </div>
+    <div class="game" data-state="finish">
+        Finish
+    </div>
 </main>
 <footer>
     <div class="container footer-layout header-background">
@@ -33,6 +55,6 @@
         </div>
     </div>
 </footer>
-<!--<script type="module" src="./index.js"></script>-->
+<script type="module" src="./index.js"></script>
 </body>
 </html>
