feat: Implement basic cell grid

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -29,7 +29,9 @@
         </ol>
     </div>
     <div class="game" data-state="battle">
-        Battle
+        <div class="battlefield" id="battlefield">
+
+        </div>
     </div>
     <div class="game" data-state="manual">
         Manual
