feat: Implement turn-level attacks. No actual damage is dealt yet

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -22,11 +22,11 @@
 </header>
 <main class="container" id="game-container">
     <div class="game active" data-state="menu">
-        <ol class="simple-menu">
+        <ul class="simple-menu">
             <li class="simple-menu__item" data-nextstate="battle">Start game</li>
             <li class="simple-menu__item" data-nextstate="manual">Manual</li>
             <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
-        </ol>
+        </ul>
     </div>
     <div class="game" data-state="battle">
         <div class="battlefield" id="battlefield">
