feat: Implement game finish and restart

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -43,7 +43,11 @@
         Pause
     </div>
     <div class="game" data-state="finish">
-        Finish
+        Game finished
+        <ul class="simple-menu">
+            <li class="simple-menu__item" data-nextstate="menu">Main menu</li>
+            <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
+        </ul>
     </div>
 </main>
 <footer>
