feat: Implement score calculation

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -42,8 +42,16 @@
     <div class="game" data-state="pause">
         Pause
     </div>
-    <div class="game" data-state="finish">
-        Game finished
+    <div class="game" data-state="finish-win">
+        <p>You won!</p>
+        <p>Score: <span id="score">0</span> on map <span id="mapname">-</span></p>
+        <ul class="simple-menu">
+            <li class="simple-menu__item" data-nextstate="menu">Main menu</li>
+            <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
+        </ul>
+    </div>
+    <div class="game" data-state="finish-lose">
+        You lost!
         <ul class="simple-menu">
             <li class="simple-menu__item" data-nextstate="menu">Main menu</li>
             <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
