--- a/random-game/index.html
+++ b/random-game/index.html
@@ -27,6 +27,7 @@
             <li class="simple-menu__item" data-nextstate="manual">Manual</li>
             <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
         </ul>
+        <button id="menu-mute">Mute|unmute</button>
     </div>
     <div class="game" data-state="battle">
         <div class="battlefield" id="battlefield">
