feat: Set up bgm for main menu, battle, victory and loss. Also it is possible to return to main menu by clicking on brand now.

--- a/random-game/index.html
+++ b/random-game/index.html
@@ -26,8 +26,9 @@
             <li class="simple-menu__item" data-nextstate="battle">Start game</li>
             <li class="simple-menu__item" data-nextstate="manual">Manual</li>
             <li class="simple-menu__item" data-nextstate="scores">Highscores</li>
+            <li><span id="menu-mute" class="custom-icons volume muted clickable"></span></li>
         </ul>
-        <button id="menu-mute">Mute|unmute</button>
+
     </div>
     <div class="game" data-state="battle">
         <div class="battlefield" id="battlefield">
